src/objects/UserSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This setting holds the list of users to edit the wish records when the status is &quot;Abandoned&quot;</description>
    <fields>
        <fullName>Abandon_the_Granted_case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User can update the Granted Case status as Abandoned.</description>
        <label>Abandon the Granted case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Closed_Cases_except_Abandoned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User can edit  closed cases except abandoned.</description>
        <label>All Closed Cases except Abandoned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit_Abandoned_Cases__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User can edit abandoned cases</description>
        <label>Edit Abandoned Cases</label>
        <type>Checkbox</type>
    </fields>
    <label>Update Abandoned Wishes</label>
</CustomObject>